added Fetch app and updated README.md